libs/@local/hashql/eval/tests/ui/graph/read/entity/invalid-vertex-query.jsonc
//@ run: fail
//@ description: Test error when querying vertex directly without specific path
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "vertex",
        //~^ ERROR Cannot query against this complex object
        "vertex"
        //~^ ERROR Cannot query against this complex object
      ]
    ]
  ]
]
